--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 Hi This is Bhushan 
 This is my new webpage .....................#Lets do something to New#...............
 
-Welcome to india.
+
+
+
+
+Welcome to india.-------------------------------------------------------------------------------------------------------------------------------------------------
+जो तीर भी आता वो खाली नहीं जाता,
+मायूस मेरे दिल से सवाली नहीं जाता,
+काँटे ही किया करते हैं फूलों की हिफाज़त,
+फूलों को बचाने कोई माली नहीं जाता।
+
+
+
+
+
+------------------------------------------------------------------------------------------------------------------------------------------------------------------------
